--- a/.gitignore
+++ b/.gitignore
@@ -7,16 +7,34 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+lib-cov
+
+coverage
+
+.nyc_output
+
 dist
 dist-ssr
-*.local
 
-# Editor directories and files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+node_modules
+
+.DS_Store
+
 .vscode/*
 !.vscode/extensions.json
 .idea
-.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
